--- a/views/contact.html
+++ b/views/contact.html
@@ -40,7 +40,7 @@
                     <li><a href="./tour.html">Tour</a></li>
                     <li><a href="./music.html">Musica</a></li>
                     <li><a href="./gallery.html">Galeria</a></li>
-                    <li><a href="./contact.html">Contacto</a></li>
+                    <li class="active"><a href="./contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
