--- a/views/music.html
+++ b/views/music.html
@@ -38,7 +38,7 @@
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./tour.html">Tour</a></li>
-                    <li><a href="./music.html">Musica</a></li>
+                    <li class="active"><a href="./music.html">Musica</a></li>
                     <li><a href="./gallery.html">Galeria</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
                 </ul>
@@ -63,16 +63,24 @@
                         </div>
                         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/01.jpg" alt="Cover del track Nora En Pure Monsoon.">
+                                <a href="https://open.spotify.com/album/6AyysfbORoo6avgs9tfTvg?si=1KB9ZAQKRXGo8E4FCKM-qQ" target="_blank">
+                                    <img class="releasesAndSpotify__cover" src="../images/music/01.jpg" alt="Cover del track Nora En Pure Monsoon.">
+                                </a>
                             </div>
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/02.jpg" alt="Cover del track Nora En Pure Pracht.">
+                                <a href="https://open.spotify.com/album/5PoGk4EwhBXqGZLbD1aCXU?si=S_qyUSzpSuiH8LTMPneUrw" target="_blank">
+                                    <img class="releasesAndSpotify__cover" src="../images/music/02.jpg" alt="Cover del track Nora En Pure Packard.">
+                                </a>
                             </div>
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/03.jpg" alt="Cover del track Nora En Pure Enchantment.">
+                                <a href="https://open.spotify.com/album/10BRsH87G6qLzaifLggT3J?si=-k4dpxIZT1ey_A4mioPLfQ" target="_blank">
+                                    <img class="releasesAndSpotify__cover" src="../images/music/03.jpg" alt="Cover del track Nora En Pure Enchantment.">
+                                </a>
                             </div>
                             <div class="col">
-                                <img class="releasesAndSpotify__cover" src="../images/music/04.jpg" alt="Cover del track Nora En Pure Come Away.">
+                                <a href="https://open.spotify.com/album/2S4bmShnGqgg71fRxb49qD?si=7V5PuhnFTneFq77wZYRyJA" target="_blank">
+                                    <img class="releasesAndSpotify__cover" src="../images/music/04.jpg" alt="Cover del track Nora En Pure Come Away.">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -99,40 +107,64 @@
                 </div>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/07.jpg" alt="Cover del track Nora en Pure Delta, Bartok.">
+                        <a href="https://open.spotify.com/album/1xGvbgezgfzeFTndnwfY2U?si=TC8QLUX8TZy8Xq1M9wYUfA" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/07.jpg" alt="Cover del track Nora en Pure Delta, Bartok.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/08.jpg" alt="Cover del track Nora En Pure All I Need.">
+                        <a href="https://open.spotify.com/album/51B8D9NfYAQkN28wFZSHMz?si=J8_xrDUbRremNybefC2fEQ" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/08.jpg" alt="Cover del track Nora En Pure All I Need.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/09.jpg" alt="Cover del track Nora En Pure In The Air Tonight.">
+                        <a href="https://open.spotify.com/album/78dwhPzZeGdkaVeSqEdts3?si=4u9URkvKRPG6oeii_Suztg" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/09.jpg" alt="Cover del track Nora En Pure In The Air Tonight.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/10.jpg" alt="Cover del track Nora En Pure Homebound.">
+                        <a href="https://open.spotify.com/album/5vioK6YFILX6u7D1alMEsg?si=cwXn461YTPKclNcF5Ac8dw" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/10.jpg" alt="Cover del track Nora En Pure Homebound.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/11.jpg" alt="Cover del track Nora En Pure See The End.">
+                        <a href="https://open.spotify.com/album/2mgEqi8P4RVtJao5erfkyJ?si=jaT6IE9hRH6GgKPPdDmLSg" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/11.jpg" alt="Cover del track Nora En Pure See The End.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/12.jpg" alt="Cover del track Nora En Pure Heart Beating.">
+                        <a href="https://open.spotify.com/album/3DFQvyHcoDjOafv2TiNrnL?si=Tz_kdV-DTTaE0H8Fli_-4A" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/12.jpg" alt="Cover del track Nora En Pure Heart Beating.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/13.jpg" alt="Cover del track Nora En Pure Birthright.">
+                        <a href="https://open.spotify.com/album/4p6bgDG002a4SLBVbYFTLB?si=luBAuFmaS9WkrkGGcjV3kQ" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/13.jpg" alt="Cover del track Nora En Pure Birthright.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/14.jpg" alt="Cover del track Nora En Pure Polynesia.">
+                        <a href="https://open.spotify.com/album/0sieH424WlEgU2u6Z7YyfS?si=1L_7GxLfR9GBFsyxbULoaA" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/14.jpg" alt="Cover del track Nora En Pure Polynesia.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/15.jpg" alt="Cover del track Nora En Pure Trailblazer.">
+                        <a href="https://open.spotify.com/album/5Rtu3Ezee1cMkyteZrwDlU?si=UsRGlV5sQvST4xWzXV2fFA" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/15.jpg" alt="Cover del track Nora En Pure Trailblazer.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/16.jpg" alt="Cover del track Nora En Pure Dont look back.">
+                        <a href="https://open.spotify.com/album/2NghHrlS5VuPLQWYjWgebA?si=Cl3BvRNDQ7e5w5ViX-kc_g" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/16.jpg" alt="Cover del track Nora En Pure Dont look back.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/17.jpg" alt="Cover del track Nora En Pure Sphinx.">
+                        <a href="https://open.spotify.com/album/5hxuTFqT7Fd7JDbTqH3Wed?si=ac95QcLjRkqGwvs9wAbNhA" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/17.jpg" alt="Cover del track Nora En Pure Sphinx.">
+                        </a>
                     </div>
                     <div class="col">
-                        <img class="discography__miniCover" src="../images/music/18.jpg" alt="Cover del track Nora En Pure Conquer Yosemite.">
+                        <a href="https://open.spotify.com/album/5AUEWexcAg5dZzBh7cKd3V?si=hdHB0HMtTeeUak5EBQ_z3Q" target="_blank">
+                            <img class="discography__miniCover" src="../images/music/18.jpg" alt="Cover del track Nora En Pure Conquer Yosemite.">
+                        </a>
                     </div>
                 </div>
                 <br><br>
