--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,15 @@
 @import "variables";
 
-@mixin miniPhotoAnimation($scale, $duration) {
+@mixin miniPhotoScaleAnimation($scale) {
     transform: scale($scale);
+}
+@mixin typeAndDurationAnimation($duration, $typeAnimation) {
     transition-duration: $duration;
+    transition-timing-function: $typeAnimation;
 }
 @mixin photoBrightnessFilter($percent) {
     filter: brightness($percent);
+    transition: 0.5s;
 }
 
 *{
@@ -103,10 +107,15 @@ ul{
         li{
             height: 60px;
             list-style: none;
-            padding-top: 40px;
+            padding-top: 35px;
+            border-top: 5px solid $colorWhite;
+            @include typeAndDurationAnimation(100ms,ease-in-out);
+
             &:hover{
-                transform: scale(1.10);
-                transition-duration: 100ms;
+                border-top: 5px solid $colorBlackDark;
+            }
+            &.active{
+                border-top: 5px solid $colorBlackDark;
             }
         }
         a{
@@ -117,6 +126,7 @@ ul{
             font-size: 16px;
             line-height: 0px;
             text-transform: uppercase;
+
             &:hover{
                 color: $colorBlackDark;
             }
@@ -244,9 +254,12 @@ ul{
     td{
         border-bottom: 2px solid $colorTableBorder;
     }
-    tr:hover{
-        transform: scale(1.01);
-        transition-duration: 100ms;
+    tr{
+        @include typeAndDurationAnimation(200ms,ease-in-out);
+        &:hover{
+            transform: scale(1.01);
+            color: $colorBlackDark;
+        }
     }
     &__numeroTourDate{
         width: 80px;
@@ -352,26 +365,30 @@ ul{
     &__homePhoto{
         &--1{
             grid-area: photoLeft;
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
-                @include miniPhotoAnimation(1.2,250ms);
+                @include miniPhotoScaleAnimation(1.1);
             }
         }
         &--2{
             grid-area: photoLeftMid;
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
-                @include miniPhotoAnimation(1.2,250ms);
+                @include miniPhotoScaleAnimation(1.1);
             }
         }
         &--3{
             grid-area: photoRightMid;
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
-                @include miniPhotoAnimation(1.2,250ms);
+                @include miniPhotoScaleAnimation(1.1);
             }
         }
         &--4{
             grid-area: photoRight;
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
-                @include miniPhotoAnimation(1.2,250ms);
+                @include miniPhotoScaleAnimation(1.1);
             }
         }
     }
@@ -416,6 +433,7 @@ ul{
         &--1{
             grid-area: photoLeft;
             filter: brightness(70%);
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
                 @include photoBrightnessFilter(100%);
             }
@@ -423,6 +441,7 @@ ul{
         &--2{
             grid-area: photoLeftMid;
             filter: brightness(70%);
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
                 @include photoBrightnessFilter(100%);
             }
@@ -430,6 +449,7 @@ ul{
         &--3{
             grid-area: photoRightMid;
             filter: brightness(70%);
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
                 @include photoBrightnessFilter(100%);
             }
@@ -437,6 +457,7 @@ ul{
         &--4{
             grid-area: photoRight;
             filter: brightness(70%);
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &:hover{
                 @include photoBrightnessFilter(100%);
             }
@@ -444,6 +465,7 @@ ul{
     }
     &__miniCover{
         width: 100%;
+        cursor: pointer;
     }
     &__showMore{
         grid-area: showMore;
@@ -556,12 +578,13 @@ section a{
 
     &__cover{
         @include photoBrightnessFilter(70%);
+        @include typeAndDurationAnimation(250ms,ease-in-out);
         width: 90%;
         max-width: 190px;
         margin-bottom: 15px;
 
         &:hover{
-            @include miniPhotoAnimation(1.1,200ms);
+            @include miniPhotoScaleAnimation(1.1);
             @include photoBrightnessFilter(100%);
         }
     }
@@ -583,11 +606,12 @@ section a{
     
     &__miniCover{
         @include photoBrightnessFilter(70%);
-
+        @include typeAndDurationAnimation(250ms,ease-in-out);
         width: 90%;
         margin-bottom: 16px;
+
         &:hover{
-            @include miniPhotoAnimation(1.1,200ms);
+            @include miniPhotoScaleAnimation(1.1);
             @include photoBrightnessFilter(100%);
         }
     }
@@ -661,6 +685,49 @@ form label{
     line-height: 84.3%;
 }
 
+.modal{
+    display: none;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+
+    &__close{
+        position: absolute;
+        top: 15px;
+        right: 35px;
+        color: #f1f1f1;
+        font-size: 40px;
+        font-weight: bold;
+        transition: 0.3s;
+
+        &:hover, &:focus{
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    }
+
+    &__content{
+        margin: auto;
+        display: block;
+        width: 80%;
+        max-width: 700px;
+        animation-name: zoom;
+        animation-duration: 0.6s;
+    }
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
 
 
 
@@ -741,28 +808,29 @@ form label{
             }
         }
         &__homePhoto{
+            @include typeAndDurationAnimation(250ms,ease-in-out);
             &--1{
                 grid-area: photoLeftUp;
                 &:hover{
-                    @include miniPhotoAnimation(1.1, 250ms);
+                    @include miniPhotoScaleAnimation(1.1);
                 }
             }
             &--2{
                 grid-area: photoRightUp;
                 &:hover{
-                    @include miniPhotoAnimation(1.1, 250ms);
+                    @include miniPhotoScaleAnimation(1.1);
                 }
             }
             &--3{
                 grid-area: photoLeftDown;
                 &:hover{
-                    @include miniPhotoAnimation(1.1, 250ms);
+                    @include miniPhotoScaleAnimation(1.1);
                 }
             }
             &--4{
                 grid-area: photoRightDown;
                 &:hover{
-                    @include miniPhotoAnimation(1.1, 250ms);
+                    @include miniPhotoScaleAnimation(1.1);
                 }
             }
         }
