--- a/views/gallery.html
+++ b/views/gallery.html
@@ -39,7 +39,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./tour.html">Tour</a></li>
                     <li><a href="./music.html">Musica</a></li>
-                    <li><a href="./gallery.html">Galeria</a></li>
+                    <li class="active"><a href="./gallery.html">Galeria</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
                 </ul>
             </nav>
