--- a/views/tour.html
+++ b/views/tour.html
@@ -36,7 +36,7 @@
             <nav class="header__navDesktop">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="./tour.html">Tour</a></li>
+                    <li class="active"><a href="./tour.html">Tour</a></li>
                     <li><a href="./music.html">Musica</a></li>
                     <li><a href="./gallery.html">Galeria</a></li>
                     <li><a href="./contact.html">Contacto</a></li>
