Agrego imagenes en alta calidad para popup de galeria

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -689,11 +689,11 @@ form label{
     display: none;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 5%;
     left: 0;
     top: 0;
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    height: 95%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
@@ -717,8 +717,8 @@ form label{
     &__content{
         margin: auto;
         display: block;
-        width: 80%;
-        max-width: 700px;
+        max-width: 90%;
+        max-height: 85%;
         animation-name: zoom;
         animation-duration: 0.6s;
     }
