--- a/views/gallery.html
+++ b/views/gallery.html
@@ -61,97 +61,66 @@
                 </div>
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6">
                     <div class="col">
-                        <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini001.png" alt="Nora En Pure sonriendo, con el público a sus espaldas.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini001.png" alt="Nora En Pure sonriendo, con el público a sus espaldas." data-large="../images/photos/large/mini001.jpg">
                     </div>
                     <div class="col">
-                        <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini002.png" alt="Nora En Pure en un festival, posando frente a una vuelta al mundo, mirando hacia la derecha con los brazos abiertos.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini002.png" alt="Nora En Pure en un festival, posando frente a una vuelta al mundo, mirando hacia la derecha con los brazos abiertos." data-large="../images/photos/large/mini002.jpg">
                     </div>
                     <div class="col">
-                        <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini003.png" alt="Nora en Pure durante un show en vivo.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini003.png" alt="Nora en Pure durante un show en vivo." data-large="../images/photos/large/mini003.jpg">
                     </div>
                     <div class="col">
-                        <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini004.png" alt="Nora en Pure durante un show en vivo, mirando hacia el público.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini004.png" alt="Nora en Pure durante un show en vivo, mirando hacia el público." data-large="../images/photos/large/mini004.jpg">
                     </div>
                     <div class="col">
-                        <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini005.png" alt="Vista panoramica del escenario con iluminación azul, durante una presentación de Nora En Pure.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini005.png" alt="Vista panoramica del escenario con iluminación azul, durante una presentación de Nora En Pure." data-large="../images/photos/large/mini005.jpg">
                     </div>
                     <div class="col">
-                        <a href="#">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini006.png" alt="Vista panoramica del escenario con iluminación roja y blanca, durante una presentación de Nora En Pure.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini006.png" alt="Vista panoramica del escenario con iluminación roja y blanca, durante una presentación de Nora En Pure." data-large="../images/photos/large/mini006.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini007.png" alt="Nora En Pure en el escenario, tocando el piano durante una presentación en vivo.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini007.png" alt="Nora En Pure en el escenario, tocando el piano durante una presentación en vivo." data-large="../images/photos/large/mini007.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini008.png" alt="Nora En Pure mezclando durante un show en vivo.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini008.png" alt="Nora En Pure mezclando durante un show en vivo." data-large="../images/photos/large/mini008.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini009.png" alt="Vista panoramica del escenario, durante una presentación de Nora En Pure en Coachella.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini009.png" alt="Vista panoramica del escenario, durante una presentación de Nora En Pure en Coachella." data-large="../images/photos/large/mini009.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini010.png" alt="Vista panoramica del escenario, durante una presentación de Nora En Pure en Ultra Music Festival Miami.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini010.png" alt="Vista panoramica del escenario, durante una presentación de Nora En Pure en Ultra Music Festival Miami." data-large="../images/photos/large/mini010.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini011.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo en Ultra Music Festival Miami.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini011.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo en Ultra Music Festival Miami." data-large="../images/photos/large/mini011.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini012.png" alt="Nora En Pure posando junto a Roger Federer, ambos sosteniendo una copa en sus manos.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini012.png" alt="Nora En Pure posando junto a Roger Federer, ambos sosteniendo una copa en sus manos." data-large="../images/photos/large/mini012.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini013.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo en Ultra Music Festival Miami.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini013.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo en Ultra Music Festival Miami." data-large="../images/photos/large/mini013.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini014.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini014.png" alt="Nora En Pure de espaldas, mezclando durante un presentación en vivo." data-large="../images/photos/large/mini014.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini015.png" alt="Nora En Pure mezclando durante una presentación en vivo.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini015.png" alt="Nora En Pure mezclando durante una presentación en vivo." data-large="../images/photos/large/mini015.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini016.png" alt="Efectos de CO2 en el escenario durante una presentación de Nora En Pure.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini016.png" alt="Efectos de CO2 en el escenario durante una presentación de Nora En Pure." data-large="../images/photos/large/mini016.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini017.png" alt="Vista panoramica del público durante una presentación de Nora en Pure en el Ultra Music Festival Miami.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini017.png" alt="Vista panoramica del público durante una presentación de Nora en Pure en el Ultra Music Festival Miami." data-large="../images/photos/large/mini017.jpg">
                     </div>
                     <div class="col">
-                        <a href="">
-                            <img class="galleryPhotos__photo" src="../images/photos/mini018.png" alt="Nora En Pure mirando sonriente a la camara durante una presentación en vivo.">
-                        </a>
+                        <img class="galleryPhotos__photo" src="../images/photos/mini018.png" alt="Nora En Pure mirando sonriente a la camara durante una presentación en vivo." data-large="../images/photos/large/mini018.jpg">
                     </div>
                 </div>
             </section>
+
+            <div id="modalContainer" class="modal">
+                <span class="modal__close">&times;</span>
+                <img class="modal__content" id="modalImage">
+            </div>
 
             <div class="galleryVideos container-fluid">
                 <div class="row">
@@ -204,6 +173,7 @@
         </div>
        
         <script>
+            // Script para el nav mobile
             function myFunction() {
                 var x = document.getElementById("navMobile");
                 if (x.style.display === "grid") {
@@ -211,7 +181,26 @@
                 } else {
                     x.style.display = "grid";
                 }
-            } 
+            }
+
+            // Script para el modal de fotos
+            var modal = document.getElementById("modalContainer");
+            var images = document.getElementsByClassName("galleryPhotos__photo");
+            var modalImg = document.getElementById("modalImage");
+
+            for (var i = 0; i < images.length; i++) {
+                var img = images[i];
+                img.onclick = function(evt) {
+                    modal.style.display = "block";
+                    modalImg.src = this.getAttribute("data-large");
+                }
+            }
+
+            var span = document.getElementsByClassName("modal__close")[0];
+
+            span.onclick = function() {
+                modal.style.display = "none";
+            }
         </script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
