--- a/css/style.css
+++ b/css/style.css
@@ -508,13 +508,12 @@ form label {
   /* Stay in place */
   z-index: 1;
   /* Sit on top */
-  padding-top: 100px;
-  /* Location of the box */
+  padding-top: 5%;
   left: 0;
   top: 0;
   width: 100%;
   /* Full width */
-  height: 100%;
+  height: 95%;
   /* Full height */
   overflow: auto;
   /* Enable scroll if needed */
@@ -537,8 +536,8 @@ form label {
   .modal__content {
     margin: auto;
     display: block;
-    width: 80%;
-    max-width: 700px;
+    max-width: 90%;
+    max-height: 85%;
     animation-name: zoom;
     animation-duration: 0.6s; }
 
