--- a/views/contact.html
+++ b/views/contact.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Sitio oficial de Nora En Pure. Conecte con el artista y obtenga información sobre contrataciones.">
         <meta name="keywords" content="contacto, redes sociales, contrataciones, contratar nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
 
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
